--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOLF GROUP</title>
     <link rel="stylesheet" href="/css/styles.css">
+    
 </head>
 
 <body>
@@ -22,7 +23,7 @@
             <div class="row">
                 <ul class="listUl">
 
-                    <li class="listLogo"><img src="./images/holden.jpg" alt="" class="imgLogo"></li>
+                    <li class="listLogo"><img src="./images/logo1.png" alt="" class="imgLogo"></li>
                 </ul>
             </div>
             <div class="row">
@@ -30,7 +31,7 @@
                 <li class="listUl"><a href="#">CONTACTO</a></li>
             </div>
         </div>
-        </ul>
+    
     </header>
     <main>
         <section class="banner">
